# smart_house_march_2024

./: CMakeLists.txt  main.cpp  readme.txt
